fixing responsiveness first step

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="div-weights-text">
             
            <div class="weightsE">
-            <input type="number" name="array[]" value="" class="weight" /><br>
+            <input type="number" name="array[]" value="" class="weight" placeholder="weight 1" style="color:black"/><br>
         <input type="number" name="array[]" value="" class="weight"/><br>
         <input type="number" name="array[]" value="" class="weight"/><br>
         <input type="number" name="array[]" value="" class="weight"/><br>
