fixed js standard code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Scale-balance</title>
-    <script src="./assets/script/scalebalancing.js" defer></script>
+   
     <link rel="stylesheet" href="./assets/syles/style.css" />
   </head>
   <body>
@@ -15,7 +15,7 @@
       <div id="array-of-weights">
        <h3>Create your list of weights here below</h3> 
           <div class="div-weights-text">
-           <div class="weightsE">
+           <div class="weightse">
             <input type="number" name="array[]" value="" class="weight" placeholder="weight 1" style="color:black"/><br>
         <input placeholder="weight 2" type="number" name="array[]" value="" class="weight"/><br>
         <input type="number" name="array[]" value="" class="weight" placeholder="weight 3"/><br>
@@ -39,5 +39,6 @@
           </div> 
       </div>
     </div>
+     <script src="./assets/script/scalebalancing.js"></script>
   </body>
 </html>
